--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.11"
+  },
+  "engines": {
+    "node": "16.13.0"
   }
 }
