--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "react-nodejs-kt",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "16.x"
+  },
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,8 +18,5 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.11"
-  },
-  "engines": {
-    "node": "16.13.0"
   }
 }
